samples/_failures_safe/1761661394_48b685_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9caa03e.c: In function ‘main’:
./samples/SAFE/__tmp_f9caa03e.c:162:5: error: expected expression at end of input
  162 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_f9caa03e.c:162:5: error: expected declaration or statement at end of input
